# plantuml-little

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  FEATURES.zh.md  PLAN.md  README.md  README.zh.md  continue.md  gen_font_data.py  libdot_splines.rlib  libgeom.rlib  patch_java.py  patch_sheetblock.patch  svek.dot  test_newline.puml  test_output.txt  test_parse.rs
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  regenerate-refs.yml  release.yml
.trace-skill/after-trackempty-qualifiedassoc001/: case.json  report.md
.trace-skill/iter6-state-history001/: case.json  report.md
.trace-skill/iter6-state-note001/: case.json  report.md
.trace-skill/iter6b-state-history001/: case.json  report.md
.trace-skill/iter6b-state-note001/: case.json  report.md
.trace-skill/live-a0002-current/: case.json  report.md
.trace-skill/live-a0002-latest/: case.json  report.md
.trace-skill/live-a0002-now/: case.json  report.md
.trace-skill/live-activity-creole/: case.json  report.md
.trace-skill/live-activity-creole-after-jaws3/: case.json  report.md
.trace-skill/live-activity-creole-patched/: case.json  report.md
.trace-skill/live-batch-after-jaws6/: pass-rate.json
.trace-skill/live-batch-repair/: suite-report.md  suite.json
.trace-skill/live-dev-activity-creole-patched/: case.json  report.md
.trace-skill/live-dev-activity-creole-singlecol/: case.json  report.md
.trace-skill/live-hideshow003/: case.json  report.md
.trace-skill/live-jaws3/: case.json  report.md
.trace-skill/live-jaws3-after-shared/: case.json  report.md
.trace-skill/live-jaws3-current/: case.json  report.md
.trace-skill/live-jaws3-preproc-step/: case.json  report.md
.trace-skill/live-jaws3-skill2/: case.json  report.md
.trace-skill/live-jaws3-skill3/: case.json  report.md
.trace-skill/live-jaws6-after-style-fix/: case.json  report.md
.trace-skill/live-jaws6-after-title-fix/: case.json  report.md
.trace-skill/live-jaws6-seq-x/: case.json  report.md
.trace-skill/live-qualifiedassoc001/: case.json  report.md
.trace-skill/live-qualifiedassoc001-skill2/: case.json  report.md
.trace-skill/live-qualifiedassoc001-skill3/: case.json  report.md
.trace-skill/live-state-note001-after-attachment/: case.json  report.md
.trace-skill/live-state-note001-after-richtext/: case.json  report.md
.trace-skill/live-state-note001-iter2/: case.json  report.md
.trace-skill/live-state-note001-iter3/: case.json  report.md
.trace-skill/live-state-note001-iter4/: case.json  report.md
.trace-skill/live-state-note001-iter5/: case.json  report.md
.trace-skill/live-state-note001-round2/: case.json  report.md
.trace-skill/live-state-note001-skill4/: case.json  report.md
.trace-skill/live-suite/: suite-report.md  suite.json
.trace-skill/live-suite-validated/: suite-report.md  suite.json
.trace-skill/live-swimlane001-after-limit/: case.json  report.md
.trace-skill/live-swimlane001-now/: case.json  report.md
.trace-skill/postpatch-generics001/: case.json  report.md
.trace-skill/postpatch-qualifiedassoc001/: case.json  report.md
.trace-skill/postpatch-qualifiedassoc002/: case.json  report.md
.trace-skill/repair-qualifiedassoc001/: case.json  report.md
.trace-skill/skill-upgrade/: pass-rate.json
.trace-skill/skill-upgrade2/: pass-rate.json
.trace-skill/suite/: suite.json
.trace-skill/swimlane001-next/: case.json  report.md
.trace-skill/tests__fixtures__activity__a0002/: case.json  report.md
.trace-skill/tests__fixtures__class__hideshow004/: case.json  report.md
.trace-skill/tests__fixtures__dev__jaws__jaws11/: case.json  report.md
.trace-skill/tests__fixtures__nonreg__svg__SVG0004_Smetana/: case.json  report.md
.trace-skill/tests__fixtures__preprocessor__svg0004_smetana/: case.json  report.md
docs/: README.md  base_module_migration_audit.md  current_failure_analysis_and_action_guide.md  java_rust_diagram_support_and_reference_audit.md  java_rust_feature_gap_analysis.md  reference_alignment_execution_todo.md  special_ext_reference_split_workflow.md
examples/: dump_svg.rs
scripts/: analyze_failures.py  check_reference_failures.sh
src/: error.rs  font_data.rs  font_metrics.rs  lib.rs  main.rs  openiconic.rs  style.rs
tests/: extract_fixtures.py  generate_golden.sh  generate_reference.sh  generate_test_list.py  golden_tests.rs  integration.rs  klimt_verify.rs  known_failures.txt  port_abel.rs  port_atmp.rs  port_command.rs  port_decoration.rs  port_dot.rs  port_klimt.rs  port_klimt_drawing.rs  port_klimt_drawing_svg.rs  port_sequence_layout.rs  port_sequence_render.rs  port_skin.rs  port_stereo.rs  port_style.rs  port_svek.rs  port_tim.rs  reference_tests.rs  special_ext_reference_activity_split.rs  special_ext_reference_class_split.rs  special_ext_reference_seq_split.rs  special_ext_reference_state_split.rs  svek_verify.rs
tmp_debug/: java_ref_audit_official_stable_v1_2026_2_20260404.json  stable_dim_audit.json
tools/: port_java_tests.py
(+276 files in other folders)
