[package]
name = "plantuml-little"
version = "1.2026.2"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later OR LGPL-3.0-or-later OR Apache-2.0 OR EPL-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .puml to .svg converter — byte-exact SVG parity with Java PlantUML"
homepage = "https://github.com/kookyleo/plantuml-little"
repository = "https://github.com/kookyleo/plantuml-little"
keywords = ["plantuml", "puml", "svg", "diagram", "uml"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "continue.md",
    "*.log",
    "*.rlib",
    "tmp_debug/",
    "tests/ext_fixtures/",
    ".trace-skill/",
    ".claude/",
    "scripts/",
    "patch_java.py",
    "gen_font_data.py",
    "fonts/",
]

[[bin]]
name = "plantuml-little"
path = "src/main.rs"

[dependencies]
thiserror = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
vizoxide = "1.0.5"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
ureq = "3"
url = "2"
flate2 = { version = "1", features = ["zlib"], default-features = false }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# vizoxide 1.0.5 on crates.io has const/mut pointer cast errors on Rust 1.82+.
# Upstream merged the fix (19h/vizoxide#5) but has not yet published 1.0.6.
# Remove this patch once vizoxide >= 1.0.6 is on crates.io.
[patch.crates-io]
vizoxide = { git = "https://github.com/kookyleo/vizoxide.git", rev = "13b7dcc" }
