[package]
name = "plantuml-little"
version = "1.2026.2-2"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later OR LGPL-3.0-or-later OR Apache-2.0 OR EPL-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .puml to .svg converter — byte-exact SVG parity with Java PlantUML"
homepage = "https://github.com/kookyleo/plantuml-little"
repository = "https://github.com/kookyleo/plantuml-little"
keywords = ["plantuml", "puml", "svg", "diagram", "uml"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "continue.md",
    "*.log",
    "*.rlib",
    "*.svg",
    "*.patch",
    "tmp_debug/",
    "tests/",
    "stdlib/",
    "fonts/",
    "docs/",
    ".trace-skill/",
    ".claude/",
    "scripts/",
    "patch_java.py",
    "gen_font_data.py",
]

[[bin]]
name = "plantuml-little"
path = "src/main.rs"

[dependencies]
thiserror = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
# graphviz-anywhere 0.1.5 is the first release with HTML-label support
# enabled on macOS/Linux (WITH_EXPAT=ON) and with the size_t overflow in
# the C wrapper fixed. Anything older crashes on render on 64-bit targets
# or produces wrong geometry for HTML-labeled diagrams.
graphviz-anywhere = "0.1.5"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
ureq = "3"
url = "2"
flate2 = { version = "1", features = ["zlib"], default-features = false }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
